--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
         <div class="main-content">
             <!-- Start Home Section -->
             <section class="home section">
-                Home
+            <div class="container">
+                <div class="row">
+                    <div class="home-info padd-15">
+                        <h3 class="hello">
+                            Hello, my name is <span class="name">Mahmoud Mostafa</span>
+                        </h3>
+                        <h3 class="my-profession">I'm a <span class="typing">Web Designer</span></h3>
+                        <p>I'm a web Designer with extensive experience for over 2 years. My expertise is to create
+                            and website design, graphic design, and many more...
+                        </p>
+                        <a href="#cantact" class="btn hire-me">Hire Me</a>
+                    </div>
+                    <div class="home-img padd-15">
+                        <img src="images/my-image.jpg" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
             </section>
             <!-- End Home Section -->
         </div>
