Add About Page style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Main Content Start -->
         <div class="main-content">
             <!-- Start Home Section -->
-            <section class="home section">
+            <section class="home section hidden">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -53,6 +53,64 @@
             </div>
             </section>
             <!-- End Home Section -->
+            <!-- Start About Section -->
+                <section class="about section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-title padd-15">
+                                <h2>About Me</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="about-content padd-15">
+                                <div class="row">
+                                    <div class="about-text padd-15">
+                                        <h3>I'm Mahmoud Mostafa and <span>Web Developer</span></h3>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                    </div>
+                                    <div class="row padd-15">
+                                        <div class="personnal-info ">
+                                            <div class="row">
+                                                <div class="info-item padd-15">
+                                                    <p>BirthDay : <span>30 sep 2001</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Age : <span>21</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Website : <span>https://www.website.com</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Email : <span>mahmoud309mostafa@gmail.com</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Degree : <span>CS</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Phone : <span>+20 1060427406</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>City : <span>Cairo</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Freelancer : <span>Available</span></p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="button padd-15">
+                                                    <a href="#" class="btn">Download Cv</a>
+                                                    <a href="#contact" class="btn hire-me">Hire Me</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="skills padd-15">Skills</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            <!-- End About Section -->
         </div>
         <!-- Main Content End -->
     </div>
