Add About section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,138 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="skills padd-15">Skills</div>
+                                        <div class="skills padd-15">
+                                            <div class="row">
+                                                <div class="skill-item padd-15">
+                                                    <h5>HTML</h5>
+                                                    <div class="progress">
+                                                        <div class="progress-in" style="width: 76%;"></div>
+                                                        <div class="skill-percent">76%</div>
+                                                    </div>
+                                                </div>
+                                                <div class="skill-item padd-15">
+                                                    <h5>CSS</h5>
+                                                    <div class="progress">
+                                                        <div class="progress-in" style="width: 86%;"></div>
+                                                        <div class="skill-percent">86%</div>
+                                                    </div>
+                                                </div>
+                                                <div class="skill-item padd-15">
+                                                    <h5>JS</h5>
+                                                    <div class="progress">
+                                                        <div class="progress-in" style="width: 50%;"></div>
+                                                        <div class="skill-percent">50%</div>
+                                                    </div>
+                                                </div>
+                                                <div class="skill-item padd-15">
+                                                    <h5>React.js</h5>
+                                                    <div class="progress">
+                                                        <div class="progress-in" style="width: 40%;"></div>
+                                                        <div class="skill-percent">40%</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="education">
+                                            <h3 class="title">Education</h3>
+                                            <div class="row">
+                                                <div class="timeline-box padd-15">
+                                                    <div class="timeline shadow-dark">
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="experience padd-15">
+                                            <h3 class="title">Experience</h3>
+                                            <div class="row">
+                                                <div class="timeline-box padd-15">
+                                                    <div class="timeline shadow-dark">
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                        <div class="timeline-item">
+                                                            <div class="circle-dot"></div>
+                                                            <h3 class="timeline-date">
+                                                                <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            </h3>
+                                                            <h4 class="timeline-title">Master in Computer Science</h4>
+                                                            <p class="timeline-text">
+                                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
