--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Main Content Start -->
         <div class="main-content">
             <!-- Start Home Section -->
-            <section class="home section hidden">
+            <section class="home section">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -242,6 +242,208 @@
                     </div>
                 </section>
             <!-- End About Section -->
+            <!-- Start servies Section -->
+                <section class="service section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-title padd-15">
+                                <h2>Services</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="service-item padd-15">
+                                <div class="services-item-inner">
+                                    <div class="icon">
+                                        <i class="fa fa-mobile-alt"></i>
+                                    </div>
+                                    <h4>Wed Design</h4>
+                                    <p>Create a Responsive Personal Portfolio Website Design using HTML CSS and JavaScript</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            <!-- End servies Section -->
+            <!-- start Portfolio section -->
+                <section class="section portfolio">
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-title padd-15">
+                                <h2>Portfolio</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="portfolio-heading padd-15">
+                                <h2>My Last Projects : </h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="portfolio-item padd-15">
+                                <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="./images/project.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            <!-- end Portfolio section -->
+            <!-- Start Contact Section -->
+            <section class="section contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <h3 class="contact-title padd-15">Have You Any Qustions ?</h3>
+                    <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                    <div class="row">
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <h4>Call Us On</h4>
+                            <p>+20 1060427406</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                            <h4>Office</h4>
+                            <p>Cairo</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-envelope"></i></div>
+                            <h4>Email</h4>
+                            <p>mahmoud309mostafa@gmail.com</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-globe-europe"></i></div>
+                            <h4>website</h4>
+                            <p>https://www.domain.com</p>
+                        </div>
+                    </div>
+                    <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+                    <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
+                    <div class="row">
+                        <div class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Email">
+                                    </div>
+                                </div>
+                            </div>
+                                <div class="row">
+                                    <div class="form-item col-12 padd-15">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Subject">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-item col-12 padd-15">
+                                        <div class="form-group">
+                                            <textarea name="" class="form-control" id="" placeholder="Massage"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-item col-12 padd-15">
+                                        <div class="form-group">
+                                            <button type="submit" class="btn">Send Massage</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            <!-- </div> -->
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- End Contact Section -->
         </div>
         <!-- Main Content End -->
     </div>
