--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Files -->
     <link rel="StyleSheet" href="css/index.css"/>
-    <link rel="StyleSheet" href="css/skins/colors.css"/>
+    <link rel="StyleSheet" href="css/skins/color-1.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+    <!-- Style Switcher -->
+    <link rel="StyleSheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled/>
+    <link rel="StyleSheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled/>
+    <link rel="StyleSheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled/>
+    <link rel="StyleSheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled/>
+    <link rel="StyleSheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled/>
+    <link rel="stylesheet" href="css/style-switcher.css">
     <title>CV</title>
 </head>
 <body>
@@ -22,18 +29,18 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
         <!-- Aside End -->
         <!-- Main Content Start -->
         <div class="main-content">
             <!-- Start Home Section -->
-            <section class="home section">
+            <section class="home section" id="home">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -54,7 +61,7 @@
             </section>
             <!-- End Home Section -->
             <!-- Start About Section -->
-                <section class="about section">
+                <section class="about section" id="about">
                     <div class="container">
                         <div class="row">
                             <div class="section-title padd-15">
@@ -243,7 +250,7 @@
                 </section>
             <!-- End About Section -->
             <!-- Start servies Section -->
-                <section class="service section">
+                <section class="service section" id="services">
                     <div class="container">
                         <div class="row">
                             <div class="section-title padd-15">
@@ -310,7 +317,7 @@
                 </section>
             <!-- End servies Section -->
             <!-- start Portfolio section -->
-                <section class="section portfolio">
+                <section class="section portfolio" id="portfolio">
                     <div class="container">
                         <div class="row">
                             <div class="section-title padd-15">
@@ -370,7 +377,7 @@
                 </section>
             <!-- end Portfolio section -->
             <!-- Start Contact Section -->
-            <section class="section contact">
+            <section class="section contact" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -448,7 +455,26 @@
         <!-- Main Content End -->
     </div>
     <!-- Main Containear End -->
+    <!-- Style Switcher Start -->
+    <div class="style-switcher">
+        <div class="style-switcher-toggler s-icon">
+            <i class="fas fa-cog fa-spin"></i>
+        </div>
+        <div class="day-night s-icon">
+            <i class="fas"></i>
+        </div>
+        <h4>Theme Colors</h4> 
+        <div class="colors">
+            <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+            <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+            <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+            <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+            <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+        </div>  
+    </div>
+    <!-- Style Switcher End -->
     <!-- JavaScript file -->
     <script src="js/index.js"></script>
+    <script src="js/styleSwitcher.js"></script>
 </body>
 </html>
