--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
     </div>
     <!-- Style Switcher End -->
     <!-- JavaScript file -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="js/index.js"></script>
     <script src="js/styleSwitcher.js"></script>
 </body>
