--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             Hello, my name is <span class="name">Mahmoud Mostafa</span>
                         </h3>
                         <h3 class="my-profession">I'm a <span class="typing">Web Designer</span></h3>
-                        <p>I'm a web Designer with extensive experience for over 2 years. My expertise is to create
+                        <p>I'm a web Designer with extensive experience for over 2 years. <br>My expertise is to create
                             and website design, graphic design, and many more...
                         </p>
                         <a href="#cantact" class="btn hire-me">Hire Me</a>
@@ -84,12 +84,12 @@
                                                 <div class="info-item padd-15">
                                                     <p>Age : <span>21</span></p>
                                                 </div>
-                                                <div class="info-item padd-15">
+                                                <!-- <div class="info-item padd-15">
                                                     <p>Website : <span>https://www.website.com</span></p>
                                                 </div>
                                                 <div class="info-item padd-15">
                                                     <p>Email : <span>mahmoud309mostafa@gmail.com</span></p>
-                                                </div>
+                                                </div> -->
                                                 <div class="info-item padd-15">
                                                     <p>Degree : <span>CS</span></p>
                                                 </div>
@@ -143,7 +143,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row padd-15">
                                         <div class="education">
                                             <h3 class="title">Education</h3>
                                             <div class="row">
