--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                         <img src="./images/image-1.WEBP" alt="project-1">
                                         <h4>E-commerce App</h4>
                                         <div class="row">
-                                            <a href="https://gifted-mahavira-b6ff57.netlifyapp" class="proj btn live">View Live</a>
+                                            <a href="https://ecom258.netlify.app/" class="proj btn live">View Live</a>
                                             <a href="https://github.com/mahmoudjhonny/ECommerce-App" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
