--- a/index.html
+++ b/index.html
@@ -433,30 +433,30 @@
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
                     <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
                     <div class="row">
-                        <div class="contact-form padd-15">
+                        <form class="contact-form padd-15" action="https://formspree.io/f/meqndyvl" method="post">
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Name">
+                                        <input type="text" class="form-control" placeholder="Name" required name="Name">
                                     </div>
                                 </div>
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input type="email" class="form-control" placeholder="Email" required name="Email">
                                     </div>
                                 </div>
                             </div>
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Subject">
+                                            <input type="text" class="form-control" placeholder="Subject" required name="Subject">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
                                         <div class="form-group">
-                                            <textarea name="" class="form-control" id="" placeholder="Massage"></textarea>
+                                            <textarea name="Massage" class="form-control" id="" placeholder="Massage" required></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -468,7 +468,7 @@
                                     </div>
                                 </div>
                             <!-- </div> -->
-                        </div>
+                            </form>
                     </div>
                 </div>
             </section>
