--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                                         <img src="./images/image-1.WEBP" alt="project-1">
                                         <h4>E-commerce App</h4>
                                         <div class="row">
-                                            <a href="https://ecom258.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/ECommerce-App" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://ecom258.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/ECommerce-App" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
@@ -340,8 +340,8 @@
                                         <img src="./images/image-2.WEBP" alt="project-2">
                                         <h4>My Book Reader</h4>
                                         <div class="row">
-                                            <a href="https://mybookreader111.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/MyBook-Reader" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://mybookreader111.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/MyBook-Reader" class="proj btn">GitHub</a>
                                         </div>
                                 </div>
                             </div>
@@ -352,8 +352,8 @@
                                         <img src="./images/image-3.WEBP" alt="project-3">
                                         <h4>Dashboard App</h4>
                                         <div class="row">
-                                            <a href="https://admin-dashboard-test.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/React-Dashboard-Ui" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://admin-dashboard-test.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/React-Dashboard-Ui" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
@@ -364,8 +364,8 @@
                                         <img src="./images/image-4.WEBP" alt="project-4">
                                         <h4>Would-You-Rather</h4>
                                         <div class="row">
-                                            <a href="https://wouldjhonnyrather.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/would-you-rather" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://wouldjhonnyrather.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/would-you-rather" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
@@ -376,8 +376,8 @@
                                         <img src="./images/image-5.webp" alt="project-5">
                                         <h4>Landing Page</h4>
                                         <div class="row">
-                                            <a href="https://landing1478.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/landing-page" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://landing1478.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/landing-page" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
@@ -388,8 +388,8 @@
                                         <img src="./images/image-6.WEBP" alt="project-6">
                                         <h4>Magic Game</h4>
                                         <div class="row">
-                                            <a href="https://game-987u.netlify.app/" class="proj btn live">View Live</a>
-                                            <a href="https://github.com/mahmoudjhonny/memory_game" class="proj btn">GitHub</a>
+                                            <a target="_blank" href="https://game-987u.netlify.app/" class="proj btn live">View Live</a>
+                                            <a target="_blank" href="https://github.com/mahmoudjhonny/memory_game" class="proj btn">GitHub</a>
                                         </div>
                                     </div>
                                 </div>
@@ -415,19 +415,9 @@
                             <p>+20 1060427406</p>
                         </div>
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Office</h4>
-                            <p>Cairo</p>
-                        </div>
-                        <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
                             <p>mahmoud309mostafa@gmail.com</p>
-                        </div>
-                        <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-globe-europe"></i></div>
-                            <h4>website</h4>
-                            <p>https://www.domain.com</p>
                         </div>
                     </div>
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
